19 March 2012: Wouter
	- iana portlist updated.

16 March 2012: Wouter
	- Patch for access to full DNS packet data in unbound python module
	  from Ondrej Mikle.

9 March 2012: Wouter
	- Applied line-buffer patch from Augie Schwer to validation.reporter.sh.

2 March 2012: Wouter
	- flush_infra cleans timeouted servers from the cache too.
	- removed warning from --enable-ecdsa.

1 March 2012: Wouter
	- forward-first option.  Tries without forward if a query fails.
	  Also stub-first option that is similar.

28 February 2012: Wouter
	- Fix from code review, if EINPROGRESS not defined chain if statement
	  differently.

27 February 2012: Wouter
	- Fix bug#434: on windows check registry for config file location
	  for unbound-control.exe, and unbound-checkconf.exe.

23 February 2012: Wouter
	- Fix to squelch 'network unreachable' errors from tcp connect in
	  logs, high verbosity will show them.

16 February 2012: Wouter
	- iter_hints is now thread-owned in module env, and thus threadsafe.
	- Fix prefetch and sticky NS, now the prefetch works.  It picks
	  nameservers that 'would be valid in the future', and if this makes
	  the NS timeout, it updates that NS by asking delegation from the
	  parent again.  If child NS has longer TTL, that TTL does not get
	  refreshed from the lookup to the child nameserver.

15 February 2012: Wouter
	- Fix forward-zone memory, uses malloc and frees original root dp.
	- iter hints (stubs) uses malloc inside for more dynamicity.
	- unbound-control forward_add, forward_remove, stub_add, stub_remove
	  can modify stubs and forwards for running unbound (on mobile computer)
	  they can also add and remove domain-insecure for the zone.

14 February 2012: Wouter
	- Fix sticky NS (ghost domain problem) if prefetch is yes.
	- iter forwards uses malloc inside for more dynamicity.

13 February 2012: Wouter
	- RT#2955. Fix for cygwin compilation. 
	- iana portlist updated.

10 February 2012: Wouter